// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exampleShortHeaders.json post build checks defaultTags 1`] = `
Object {
  "authorIds": Array [
    "R0F5QGNCzgOY5w2cxGeKJOq2UaD2",
  ],
  "codeSizeLevel": "small",
  "description": "Check out [the YouTube video](https://www.youtube.com/watch?v=eU0kkLSdw0Y&list=PL3YlZTdKiS898Wio0tvKjQM0x3zo4V0Mb) explaining how this example was made.",
  "difficultyLevel": "simple",
  "gdevelopVersion": "",
  "id": "d260466ba96262fd00930eb950ae486209a828f851add1c1c5bbc2a2d020f868",
  "license": "MIT",
  "name": "Platformer",
  "previewImageUrls": Array [
    "https://resources.gdevelop-app.com/examples/platformer/preview.png",
    "https://resources.gdevelop-app.com/examples/platformer/square-icon.png",
  ],
  "shortDescription": "An example of a basic platformer (Mario-like) game. Jump around and collect as many coins as you can!",
  "slug": "platformer",
  "tags": Array [
    "platformer",
    "game",
    "simple",
    "Starter",
    "Anchor",
    "Animatable capability",
    "Event functions",
    "Sounds and music",
    "Layers and cameras",
    "Events and control flow",
    "External layouts",
    "Mathematical tools",
    "Objects",
    "Scene",
    "Timers and time",
    "Variables",
    "Debugger Tools",
    "Effect capability",
    "Flippable capability",
    "Linked objects",
    "Opacity capability",
    "Panel Sprite (9-patch) Object",
    "Particle system",
    "Platform behavior",
    "Shape painter",
    "Resizable capability",
    "Scalable capability",
    "Sprite",
    "System information",
    "Text capability",
    "Text object",
    "Tiled Sprite Object",
    "Tweening",
    "Parallax for Tiled Sprite",
    "Panel sprite button",
    "Platformer character animator",
    "Rectangular movement",
    "Smooth Camera",
    "Checkpoints",
    "Gamepads (controllers)",
    "Multitouch joystick and buttons (sprite)",
    "Shake object",
    "Volume Falloff",
    "Screen Orientation Checker",
  ],
}
`;

exports[`exampleShortHeaders.json post build checks defaultTags 2`] = `
Object {
  "authorIds": Array [
    "jy7FXnGX0ZZcWfrAI9YuQaeIphi1",
    "9MGDlUQAh8QUilno4JPycekjRCJ3",
    "R0F5QGNCzgOY5w2cxGeKJOq2UaD2",
  ],
  "codeSizeLevel": "small",
  "description": "",
  "difficultyLevel": "simple",
  "gdevelopVersion": "",
  "id": "3cfc75d79ece13652857e8f9c20931f275916ca88f89940ca81b91734da4ac5d",
  "license": "MIT",
  "name": "Tappy plane",
  "previewImageUrls": Array [
    "https://resources.gdevelop-app.com/examples/tappy-plane/thumbnail.png",
  ],
  "quickCustomizationImageUrl": "https://resources.gdevelop-app.com/examples/tappy-plane/thumbnail-quick-customization.png",
  "shortDescription": "Tappy Plane is a Flappy Bird-like game. Tap to keep your plane in the air and make your way through the cave system.
Get as far as you can before you crash in to a wall, submit your score, and try again.",
  "slug": "tappy-plane",
  "tags": Array [
    "tappy-plane",
    "game",
    "simple",
    "Starter",
    "Anchor",
    "Animatable capability",
    "Event functions",
    "Sounds and music",
    "Layers and cameras",
    "Events and control flow",
    "External layouts",
    "Storage",
    "Keyboard",
    "Mathematical tools",
    "Mouse and touch",
    "Network",
    "Objects",
    "Scene",
    "Timers and time",
    "Variables",
    "Destroy Outside Screen Behavior",
    "Effect capability",
    "Flippable capability",
    "Leaderboards",
    "Opacity capability",
    "Panel Sprite (9-patch) Object",
    "Platform behavior",
    "Player Authentication",
    "Resizable capability",
    "Scalable capability",
    "Sprite",
    "Text capability",
    "Text Input",
    "Text object",
    "Tiled Sprite Object",
    "Tweening",
    "Ellipse movement",
    "Panel sprite button",
    "Shake object",
    "Flash object",
  ],
}
`;
